...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="tuf-pD-yk5" userLabel="Auth View Controller" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="PNn-P7-PIS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0lZ-Pq-0QW" userLabel="loginButton">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="486-X7-Gun"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button"/>
...
                            <constraint firstItem="Y5V-Vv-3u8" firstAttribute="top" secondItem="xW2-ky-bZ4" secondAttribute="top" id="hq3-CQ-jzA"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="ENz-oJ-d2r"/>
                    <connections>
                        <outlet property="progressView" destination="Y5V-Vv-3u8" id="USK-3u-tcv"/>
                        <outlet property="webView" destination="Sg2-Gf-Yre" id="IyS-rQ-Xq7"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="i3y-LL-wTf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="316" y="1748"/>
        </scene>
...
