...
    static let imageInsets = UIEdgeInsets(top: 4, left: 16, bottom: 4, right: 16)
    static let likeButtonSize: CGSize = CGSize(width: 42, height: 42)
    static let dateLabelInsets = UIEdgeInsets(top: 0, left: 8, bottom: 8, right: 0)
    static let dateLabelFontSize: CGFloat = 13
    
    enum Images {
        static let likeButtonOn = "likeButton"
        static let likeButtonOff = "noLikeButton"
    }
}

final class ImagesListCell: UITableViewCell {
    
...
