...
    static let shareButtonSize = CGSize(width: 50, height: 50)
    static let shareButtonBottomInset: CGFloat = 17
    static let minZoomScale: CGFloat = 0.1
    static let maxZoomScale: CGFloat = 1.25
    
    enum Images {
        static let backward = "backButton"
        static let sharing = "shareButton"
    }
}

final class SingleImageViewController: UIViewController {
    
...
